# zaqar-tempest-plugin

./: .coveragerc  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
releasenotes/notes/: drop-py-2-7-8a4da4bd0e7c36f5.yaml  drop-python38-28fd72eff86e858e.yaml
releasenotes/source/: conf.py  index.rst
zaqar_tempest_plugin/: plugin.py
zaqar_tempest_plugin/api_schema/response/v1_1/: queues.py
zaqar_tempest_plugin/api_schema/response/v2/: queues.py
zaqar_tempest_plugin/services/messaging/json/: messaging_client.py
zaqar_tempest_plugin/tests/: base.py
zaqar_tempest_plugin/tests/v1/: test_claims.py  test_messages.py  test_queues.py
zaqar_tempest_plugin/tests/v1_1/: test_claims.py  test_messages.py  test_queues.py
zaqar_tempest_plugin/tests/v2/: test_claims.py  test_claims_negative.py  test_messages.py  test_messages_negative.py  test_queues.py  test_queues_negative.py  test_subscriptions.py  test_subscriptions_negative.py
